--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 fastapi = "^0.109.2"
 uvicorn = "^0.27.1"
 pydantic-settings = "^2.2.1"
+sqlalchemy = "^2.0.27"
 
 
 [build-system]
