--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.109.2"
 uvicorn = "^0.27.1"
 pydantic-settings = "^2.2.1"
 sqlalchemy = "^2.0.27"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
